[metadata]
name = server
version = 0.0.1
author = Peter Bunyan
author_email = pete@blueshed.co.uk
description = An asyncio pool executor
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
install_requires =
    invoke
    tornado

[options.extras_require]
test = pytest; pytest-tornasync; pytest-coverage; pytest-asyncio; pytest-benchmark;
dev = build; toml; axblack; pylint; isort; alembic; pdoc; bump2version;

[options.entry_points]
console_scripts =
    server = server.cli:program.run


[pylint.'MESSAGES CONTROL']
disable =
	too-few-public-methods,
	too-many-arguments,
	no-member,
	unused-argument

[tool:pytest]
asyncio_mode = strict

[coverage:run]
omit =
	src/server/cli.py
